[package]
name = "ceramic-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64-url = "2.0.2"
ceramic-core = { path = "../core" }
cid.workspace = true
dag-jose.workspace = true
libipld.workspace = true
multihash.workspace = true
once_cell.workspace = true
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_ipld_dagcbor.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
libipld.workspace = true
expect-test.workspace = true
