[package]
name = "ceramic-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
ceramic-core.workspace = true
cid.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
once_cell.workspace = true
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

[dev-dependencies]
serde_ipld_dagcbor.workspace = true
serde_ipld_dagjson.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
expect-test.workspace = true
