[package]
name = "ceramic-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64.workspace = true
ceramic-car.workspace = true
ceramic-core.workspace = true
cid.workspace = true
ipld-core.workspace = true
multihash-codetable.workspace = true
multibase.workspace = true
serde.workspace = true
serde_ipld_dagcbor.workspace = true
serde_json.workspace = true
ssi.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono = "0.4"

[dev-dependencies]
multibase.workspace = true
serde_ipld_dagjson.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
test-log.workspace = true
expect-test.workspace = true
