[package]
name = "ceramic-flight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-array.workspace = true
arrow-flight.workspace = true
arrow-schema.workspace = true
ceramic-pipeline.workspace = true
cid.workspace = true
datafusion-flight-sql-server.workspace = true
datafusion.workspace = true
expect-test.workspace = true
futures.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
ceramic-arrow-test.workspace = true
ceramic-pipeline.workspace = true
expect-test.workspace = true
http.workspace = true
mockall.workspace = true
object_store.workspace = true
shutdown.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-stream = { workspace = true, features = ["net"] }
tracing-subscriber.workspace = true

[package.metadata.cargo-machete]
ignored = [
    # Used in a macro invocation to serialize a type
]
