[package]
name = "ceramic-kubo-rpc"
description = "Provides an http service that maps Kubo RPC calls to Iroh RPC calls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
http = [
    "dep:ceramic-kubo-rpc-server",
    "dep:pin-project",
    "dep:serde",
    "dep:serde_json",
    "dep:prometheus-client",
]

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
ceramic-kubo-rpc-server = { workspace = true, optional = true }
ceramic-metadata.workspace = true
ceramic-metrics.workspace = true
ceramic-p2p.workspace = true
cid.workspace = true
dag-jose.workspace = true
futures-util.workspace = true
hex.workspace = true
iroh-car.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
itertools.workspace = true
libipld.workspace = true
libp2p-identity.workspace = true
libp2p.workspace = true
multiaddr.workspace = true
pin-project = { version = "1.1.3", optional = true }
prometheus-client = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
swagger.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
go-parse-duration = "0.1.1"

[dev-dependencies]
expect-test.workspace = true
tracing-test.workspace = true
mockall.workspace = true
async-stream.workspace = true
