[package]
name = "ceramic-kubo-rpc"
description = "Provides an http service that maps Kubo RPC calls to Iroh RPC calls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
http = ["dep:ceramic-kubo-rpc-server", "dep:serde", "dep:serde_json"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
ceramic-kubo-rpc-server = { workspace = true, optional = true }
ceramic-metadata.workspace = true
ceramic-metrics.workspace = true
cid.workspace = true
dag-jose.workspace = true
futures-util.workspace = true
hex.workspace = true
iroh-rpc-client.workspace = true
iroh-bitswap.workspace = true
itertools = "0.11.0"
ipld-core.workspace = true
libp2p-identity.workspace = true
libp2p.workspace = true
multiaddr.workspace = true
prometheus-client.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_ipld_dagcbor.workspace = true
serde_ipld_dagjson.workspace = true
swagger.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
go-parse-duration = "0.1.1"

[dev-dependencies]
expect-test.workspace = true
tracing-test.workspace = true
mockall.workspace = true
async-stream.workspace = true
ipld-dagpb.workspace = true
