[package]
name = "macro_ipld_derive"
version = "0.1.0"
authors = ["Aaron Goldman <aaron@3box.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "1.0.39"
quote = "1.0.7"
multihash-codetable = "0.1.3"
