[package]
name = "macro_ipld_derive"
version = "0.1.0"
authors = ["Aaron Goldman <goldmanaaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0.74"
quote = "1.0.7"
multihash-codetable = "0.1.3"
