[package]
name = "ceramic-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"
publish = false

[dependencies]
serde.workspace = true

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
