[package]
name = "ceramic-metrics"
description = "Ceramic metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
console-subscriber = { workspace = true, optional = true }
iroh-util.workspace = true
lazy_static.workspace = true
names.workspace = true
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
paste.workspace = true
prometheus-client.workspace = true
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dependencies.libp2p]
workspace = true
features = [
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "request-response",
    "websocket",
    "serde",
    "metrics",
    "relay",
    "dcutr",
    "autonat",
    "tokio",
]

[features]
# requires setting RUSTFLAGS="--cfg tokio_unstable"
tokio-console = ["tokio/tracing", "console-subscriber"]
