[package]
name = "ceramic-olap"
description = "Standalone Ceramic OLAP Aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
bytes.workspace = true
ceramic-event.workspace = true
cid.workspace = true
datafusion = "40.0.0"
futures.workspace = true
json-patch = "2.0.0"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
