[package]
name = "ceramic-one"
description = "Single binary Ceramic node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
ceramic-api-server.workspace = true
ceramic-api.workspace = true
ceramic-core.workspace = true
ceramic-kubo-rpc = { path = "../kubo-rpc", features = ["http"] }
ceramic-kubo-rpc-server.workspace = true
ceramic-metrics.workspace = true
ceramic-p2p.workspace = true
ceramic-service.workspace = true
ceramic-store.workspace = true
chrono.workspace = true
cid.workspace = true
clap.workspace = true
dirs = "5.0.1"
enum-as-inner = "0.6.0"
futures.workspace = true
git-version = "0.3"
glob = "0.3.1"
hex.workspace = true
home = "0.5"
hyper.workspace = true
iroh-bitswap.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
libp2p.workspace = true
minicbor.workspace = true
multiaddr.workspace = true
multibase.workspace = true
multihash.workspace = true
multihash-codetable.workspace = true
multihash-derive.workspace = true
names.workspace = true
ordered-float = "4.1.1"
prometheus-client.workspace = true
recon.workspace = true
reqwest.workspace = true
serde_json.workspace = true
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
swagger.workspace = true
tokio-metrics = { version = "0.3.1", features = ["rt"] }
tokio-prometheus-client = "0.1"
tokio.workspace = true
tracing.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[features]
default = []
tokio-console = ["ceramic-metrics/tokio-console"]

[dev-dependencies]
expect-test.workspace = true
test-log.workspace = true