[package]
name = "ceramic-one"
description = "Single binary Ceramic node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
arrow.workspace = true
arrow-cast.workspace = true
arrow-flight.workspace = true
async-stream.workspace = true
async-trait.workspace = true
ceramic-anchor-evm.workspace = true
ceramic-anchor-remote.workspace = true
ceramic-anchor-service.workspace = true
ceramic-api-server = { workspace = true, default-features = false, features = [
    "server",
] }
ceramic-api.workspace = true
ceramic-core.workspace = true
ceramic-event-svc.workspace = true
ceramic-event.workspace = true
ceramic-flight.workspace = true
ceramic-interest-svc.workspace = true
ceramic-kubo-rpc = { path = "../kubo-rpc", features = ["http"] }
ceramic-kubo-rpc-server.workspace = true
ceramic-metrics.workspace = true
ceramic-p2p.workspace = true
ceramic-peer-svc.workspace = true
ceramic-pipeline.workspace = true
ceramic-sql.workspace = true
cid.workspace = true
clap.workspace = true
datafusion.workspace = true
futures.workspace = true
git-version = "0.3"
home = "0.5"
hyper.workspace = true
iroh-bitswap.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
libp2p.workspace = true
multiaddr.workspace = true
multibase.workspace = true
multihash-codetable.workspace = true
multihash-derive.workspace = true
multihash.workspace = true
names.workspace = true
object_store.workspace = true
prometheus-client.workspace = true
recon.workspace = true
serde_ipld_dagcbor.workspace = true
shutdown.workspace = true
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
swagger.workspace = true
tokio-metrics = { version = "0.3.1", features = ["rt"] }
tokio-prometheus-client = "0.1"
tokio-stream = { workspace = true, features = ["io-util"] }
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
url.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true

[features]
default = []
tokio-console = ["ceramic-metrics/tokio-console"]

[dev-dependencies]
expect-test.workspace = true
test-log.workspace = true
