[package]
name = "ceramic-p2p"
description = "Ceramic Peer to Peer Node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ahash.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
backoff.workspace = true
bytes.workspace = true
ceramic-core.workspace = true
ceramic-metrics.workspace = true
chrono = "0.4.31"
cid.workspace = true
clap-verbosity-flag = "2.0.1"
clap.workspace = true
clio = { version = "0.3.4", features = ["clap-parse"] }
dirs = "5.0.1"
expect-test.workspace = true
futures-timer.workspace = true
futures-util.workspace = true
futures.workspace = true
git-version.workspace = true
glob = "0.3.1"
hex.workspace = true
iroh-bitswap.workspace = true
iroh-rpc-client.workspace = true
iroh-rpc-types.workspace = true
iroh-util.workspace = true
libp2p-identity.workspace = true
libp2p-mplex = "0.40.0"
libp2p-quic = { version = "0.9", features = ["tokio"] }
lru.workspace = true
multihash.workspace = true
prometheus-client.workspace = true
rand.workspace = true
recon.workspace = true
serde = { workspace = true, features = ["derive"] }
sqlx.workspace = true
ssh-key = { workspace = true, features = ["ed25519", "std", "rand_core"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "time", "sync", "macros"] }
tokio-stream.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
void.workspace = true
zeroize.workspace = true

[dependencies.libp2p]
workspace = true
features = [
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "dns",
    "request-response",
    "websocket",
    "serde",
    "metrics",
    "relay",
    "dcutr",
    "autonat",
    "rsa",
    "tokio",
    "macros",
]

[dev-dependencies]
criterion.workspace = true
rand_chacha.workspace = true
test-log.workspace = true

[[bench]]
name = "lru_cache"
harness = false
